--- a/crates/gf-auth/Cargo.toml
+++ b/crates/gf-auth/Cargo.toml
@@ -22,13 +22,14 @@ serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.67"
 thiserror = "1.0.29"
 url = "2.2.2"
-chrono = { version = "0.4.38", features = ["serde"] }
+chrono = { version = "0.4.38", features = ["serde", "now"] }
+rand = { version = "0.8.5", features = ["serde"] }
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["full"] }
 
 [features]
-# default = ["client-reqwest", "reqwest-default-tls"]
+default = ["client-reqwest", "reqwest-default-tls"]
 
 client-ureq = ["gf-auth-http/client-ureq", "__sync"]
 client-reqwest = ["gf-auth-http/client-reqwest", "__async"]
