feat(gf-auth-model): add `encode` method for Blackbox
BREAKING-CHANGE: move `fingerprint` to `gf-auth-model`
Implements: #5 #18
Closes: #5 #18

--- a/crates/gf-auth/Cargo.toml
+++ b/crates/gf-auth/Cargo.toml
@@ -13,6 +13,8 @@ keywords = ["nostale", "gf", "auth", "sdk"]
 
 [dependencies]
 gf-auth-http = { path = "../gf-auth-http", version = "0.1.0", default-features = false }
+gf-auth-model = { path = "../gf-auth-model", version = "0.1.0" }
+gf-auth-traits = { path = "../gf-auth-traits", version = "0.1.0" }
 
 async-trait = { version = "0.1.51", optional = true }
 
