--- a/crates/gf-auth-model/Cargo.toml
+++ b/crates/gf-auth-model/Cargo.toml
@@ -26,3 +26,6 @@ url = "2.2.2"
 base64 = "0.22.1"
 num-traits = "0.2.19"
 percent-encoding = "2.3.1"
+
+[dev-dependencies]
+serde_plain = { version = "1.0.2" }
