--- a/crates/gf-auth/Cargo.toml
+++ b/crates/gf-auth/Cargo.toml
@@ -28,6 +28,7 @@ chrono = { version = "0.4.38", features = ["serde", "now"] }
 rand = { version = "0.8.5", features = ["serde"] }
 futures = "0.3.30"
 http = "1.1.0"
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [dev-dependencies]
 serde_plain = { version = "1.0.2" }
